# Hathi_Submission_Workflow

./: .gitignore  .travis.yml  HISTORY.rst  Jenkinsfile  LICENSE.md  MANIFEST.in  Makefile  Product.wxs  README.rst  build_msi.wixproj  cx_setup.py  deployment.yml  dlruntime.py  documentation.url  make.bat  make.proj  make.pyproj  release.pyproj  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: about.rst  conf.py  dependencies.rst  index.rst  installMSI.rst  installSourceCLI.rst  modules.rst  tree.rst  usage.rst  workflow.gv
gui_tests/: test_object_browser.py  test_qc.py  test_select_destination.py  test_select_root.py  test_select_update_checksums.py  test_select_validate.py
hathi_submission_workflow/: __main__.py  __version__.py
hsw/: __init__.py  __main__.py  __version__.py  collection.py  collection_builder.py  gui.py  package_builder.py  package_list.py  packages.py  workflow.py
hsw/ui/: __init__.py  message_logger.py  packageBrowser.py  package_browser.py  package_files_delegate.py  packagesModel.py  packages_model.py  processing.py  wizard.py  wizard_steps.py
tests/: test_basic.py  test_collection.py  test_collection_builder.py  test_package_builder.py  test_packages.py  test_packages_model.py  test_process_bb.py  test_process_ds.py  test_ui.py  test_workflow_bb.py  test_workflow_ds.py
ui/: ui_packages.ui
windows_build/: LICENSE.rtf  Product.wxs  build_msi.wixproj  common.props  dlruntime.py  make.proj  python.props  python.targets  release.pyproj
