[metadata]
name = hsw
version = 0.0.5
url = http://www.library.illinois.edu/dccdocs/hathi_submission_workflow
download_url = https://github.com/UIUCLibrary/Hathi_Submission_Workflow
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Application to make submitting content to Hathi Trust easier
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[tool:pytest]
testpaths = tests
addopts = --verbose
